--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
-<!--
-Requirements
-[  ] Two Different Headlines
-[  ] Bold and Italic Text
-[  ] One List
-[  ] Three Images
-
-Select ONE Additional Feature to Add  
-[ no ] Feature 1 - Include at least three emojis
-[ no ] Feature 2 - Include <font> tag
-[ no ] Feature 3 - Include Underline & Highlight
-[ no ] Feature 4 - Use Square Bullets
-[ no ] Feature 5 - Include a list within a list
--->
-    
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Unit 1 Project</title>
-    </head>
-    <body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Unit 1 Project</title>
+  </head>
+  <body>
+    <h1>all about me</h1>
 
-        
-    </body>
+    <h2>basic facts</h2>
+    <ol>
+      <li>
+        <strong>I work at H&M and get paid a whole lot of moneyyy</strong>
+      </li>
+      <li><strong>I am a model</strong></li>
+      <li><strong>I am in 3 magazines</strong></li>
+      <li><strong>I sing. Never had singing lessons by the way</strong></li>
+      <li><strong>I love skateboarding</strong></li>
+      <li><strong>I am a nice pretty baddie :)</strong></li>
+    </ol> 
+  </body>
 </html>
+<html></html>
